<resources>
    <string name="app_name">GeoChal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- General strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_challenge">Create challenge</string>
    <string name="created_challenges">Challenges created by me</string>
    <string name="challenged_list">My challenges</string>
    <string name="points">Points</string>
    <string name="friends">Friends</string>
    <string name="about">About</string>
    <string name="userinfo">User info</string>
    <string name="error_server">Could not get data from server</string>
    <string name="status">Status: </string>
    <string name="add_friend">Add friend</string>

    <!-- Login fragment-->
    <string name="login_welcome">Welcome to GeoChal</string>
    <string name="create_user_button">Create User</string>
    <string name="login_button">Login</string>
    <string name="error_login">Incorrect username or password</string>
    <string name="error_create">User already registered</string>
    <string name="create_user_success">User created successfully</string>

    <!-- Create challenge -->
    <string name="create_challenge_button">Create challenge</string>
    <string name="location_error">Could not find location, try again in 10 seconds</string>
    <string name="challenge_user_name">Enter the username to challenge</string>

    <!-- Challenge list item -->
    <string name="challenge_item_distance">Distance to challenge:</string>
    <string name="challenge_item_challenged">Challenged by:</string>
    <string name="challenge_item_challenged_other">Challenged user:</string>
    <string name="challenge_item_position">Position:</string>
    <string name="challenge_item_id">Token:</string>
    <string name="challenge_item_long">Challenge longitude:</string>
    <string name="challenge_item_lat">Challenge latitude:</string>

    <string name="challenge_me_long">My longitude:</string>
    <string name="challenge_me_lat">My latitude:</string>

    <string name="update_challenge">Update challenge info</string>

    <!-- Info string -->
    <string name="about_info">GeoChal - A GPS based outdoor game of challenge your friends and coworkers to physically go to a place.
    \n\nGeoChal hopes that you are going to have a fun and active time with your friends and coworkers.\n\nCreated by Emil Palm, student at Umeå University - Umeå, Sweden
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_on_map">Show On Map</string>
    <string name="no_position">No GPS position found</string>


</resources>
