<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.umu.cs.c11epm.geochalapp.view.UserInfoFragment"
    android:id="@+id/userViewFragment"
    android:padding="4dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/user_view_name"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:id="@+id/user_view_points"
        android:layout_below="@+id/user_view_name"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:id="@+id/user_view_friends"
        android:layout_below="@+id/user_view_points"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:id="@+id/add_friend"
        android:layout_below="@+id/user_view_friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />
</RelativeLayout>
