<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.umu.cs.c11epm.geochalapp.view.ChallengedOtherItemFragment"
    android:id="@+id/challenged_other_fragment"
    android:padding="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/challenge_other_username"
        android:text="Challenged user:"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Challenge longitude:"
        android:id="@+id/challenge_other_long"
        android:textStyle="bold"
        android:layout_below="@+id/challenge_other_username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Challenge latitude:"
        android:id="@+id/challenge_other_lat"
        android:layout_below="@+id/challenge_other_long"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_challenge"
        android:id="@+id/challenge_other_update"
        android:layout_below="@+id/challenge_other_distance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Distance:"
        android:id="@+id/challenge_other_distance"
        android:layout_below="@+id/challenge_other_lat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/challenge_status"
        android:scaleType="fitXY"
        android:layout_alignBottom="@+id/challenge_other_update"
        android:layout_alignRight="@+id/challenge_other_lat"
        android:layout_alignEnd="@+id/challenge_other_lat"
        android:padding="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/status_text"
        android:layout_alignTop="@+id/challenge_status"
        android:layout_toLeftOf="@+id/challenge_status"
        android:layout_toStartOf="@+id/challenge_status"
        android:layout_alignBottom="@+id/challenge_other_update"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map"
        android:id="@+id/show_map"
        android:layout_below="@+id/challenge_other_update"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/challenge_other_update"
        android:layout_alignEnd="@+id/challenge_other_update" />

</RelativeLayout>
